manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaba-frontend-service
  namespace: kaba
spec:
  selector:
    app: kaba-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
