manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kaba-frontend-virtualservice
  namespace: kaba
spec:
  hosts:
    - 'kaba.team'
  gateways:
    - kaba-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: kaba-frontend-service
      timeout: 600s
